// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`collection.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a:
  123
  # impicitMappginValue

? b
  # explicitMappingKey
: c
  # explicitMappingValue

d:
  - 123
  # sequence

e:
  - 123
    # sequenceItem

f:
  - a
  # b.leadingComments
  - b
    # b.endComments
  - c
    # c.endComments
  # sequence.endComments
# documentBody.children

empty_content:
  # hello world

=====================================output=====================================
a:
  123
  # impicitMappginValue

? b
  # explicitMappingKey
: c
  # explicitMappingValue

d:
  - 123
  # sequence

e:
  - 123
    # sequenceItem

f:
  - a
  # b.leadingComments
  - b
    # b.endComments
  - c
    # c.endComments
  # sequence.endComments
# documentBody.children

empty_content:
  # hello world

================================================================================
`;

exports[`end-comment.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
parent:
  one: 1
  # two: 2

a:
  b:
   #b
 #a

A:
  B:
 #A
   #A

=====================================output=====================================
parent:
  one: 1
  # two: 2

a:
  b:
    #b
  #a

A:
  B:
  #A
  #A

================================================================================
`;

exports[`in-empty-item-without-newlline.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a:
  #123
=====================================output=====================================
a:
  #123

================================================================================
`;

exports[`root.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
#hello world

=====================================output=====================================
#hello world

================================================================================
`;

exports[`set.yml 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
- 123
  # 456

=====================================output=====================================
- 123
  # 456

================================================================================
`;
